# SLSS-Progeramming-2024-B

./:  notes-1-1introduction.py  .pygame-exercise-jewelthief.py  Favourite Tech - Playstation .html  Favourite Things.md  Introduction to MARP.md  Introduction to Markdown.md  chatbot.py  jewelthiefexercise.py  notes-1-2-2conditionals.py  notes-1-3stringmethods.py  notes-1-4-functions.py  notes-2-1-modules.py  notes-2-3-loops.iteration.py  notes-2-4-dictionaries.py  notes-2-5-classesandobjects.py  notes-2-morefunctions.py  notes-3-1-pygame-boilerplate-sprites.py  platform_jumper.py.py  pygame-example-shmup.py  pygame-exercise-snow.py  pygame-levelclass.py  pygame-project.py  unit-1-activity.py  unit-mid2-activity.py  work-deep.py  work-mcdobot.py  work-strings.py  work-tipcalc.py
Programming-Project-Archive-main/: README.md
Programming-Project-Archive-main/Bullet Hell Game/: README.md  main.py  pygame_boilerplate.py
Programming-Project-Archive-main/Crown/: main.py
Programming-Project-Archive-main/Dodge/: main.py
Programming-Project-Archive-main/Georges-Jungle-Jam/: README.md  main.py
Programming-Project-Archive-main/LoL/: README.md  main.py
Programming-Project-Archive-main/PvP/: main.py
Programming-Project-Archive-main/flappy-bird/: README.md  main.py  pyproject.toml
