[tool.black]
line-length = 90
python-version = ["py310"]
skip-string-normalization = true

[tool.poetry]
name = "flappy-bird"
version = "0.1.0"
description = "Your average flappy bird ripoff"
authors = ["Tinoy Thomas <tinoytpm1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.1.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pyright = "^1.1.247"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
